samples/_failures_safe/1761077738_2e398f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8d51b2fc.c: In function ‘parser_init’:
./samples/SAFE/__tmp_8d51b2fc.c:150:5: error: expected declaration or statement at end of input
  150 |     parser->lexer = lexer;
      |     ^~~~~~
